--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Iliesi Alexandru</title>
+    <title>iliesiAlexandru</title>
   </head>
   <body>
     <div id="root"></div>
